# vscode-pyproject-pilot

./: .eslintrc.js  .gitignore  .nycrc  .tool-versions  .vscode-test.js  .vscodeignore  CHANGELOG.md  LICENSE  README.md  mise.toml  package-lock.json  package.json  package.npm.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json  webpack.config.js
.github/workflows/: ci.yml
sampleWorkspace/: pyproject.toml
sampleWorkspace/samplePoetry/: pyproject.toml
sampleWorkspace/src/sampleworkspace/: __init__.py
sampleWorkspace/test_all/: pyproject.toml
sampleWorkspace/test_all_sub_table/: pyproject.toml
src/: commands.ts  common.ts  enums.ts  extension.ts  pdmCodeLens.ts  pdmCodeLensProvider.ts.disabled  pdmScriptLens.ts  pdmTaskProvider.ts.disabled  pdmTreeView.ts  pdmView.ts  preferred-pm.ts  readPyproject.ts  readScripts.ts  scriptHover.ts  scripts.ts  tasks.ts  tomlUtils.ts
src/common/: common.ts
src/common/log/: logging.ts
src/test/: runTest.ts
src/test.egg-info/: PKG-INFO  SOURCES.txt
src/test/suite/: extension.test.ts  index.ts
