

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool]
[tool.pdm]
plugins = ["sync-pre-commit-lock"]
package-type = "library"


[tool.pdm.scripts]
_.env_file = ".env"
# start_server = "fastapi run -p 12345"
start_server_with_help.shell = "flask run -p 54321 --help"
start_server_with_help.help = "Starts the server with help"

# lint-pylint = {cmd="pylint --django-settings-module=firefighter.firefighter.settings src", help="Run pylint"}
# lint-pylint-strict = {shell="pylint --django-settings-module=firefighter.settings src --fail-under=0.99", help="Run pylint, fail if score is under 9.99"}
# lint-mypy = {shell= "mypy", help="Run mypy type checker", env={"ENABLE_PAGERDUTY"="True", "ENABLE_CONFLUENCE"="True"}}
# lint-ruff = {cmd="ruff .", help="Run ruff linter"}
# lint = {composite= ["lint-ruff", "lint-pylint", "lint-mypy"], help="Run all linters (ruff, pylint, mypy)."}
# foobar = {call = "foo_package.bar_module:main"}
[tool.pdm.scripts.format]
shell = """
    black src
    isort src
"""

[tool.pdm.scripts."all_args_quoted"]
composite = ["lint mypackage/", "test -v tests/"]

[tool.pdm.dev-dependencies]
dev = ["black>=23.12.1", "isort>=5.13.2"]
[project]
name = "sampleWorkspace"
version = "0.1.0"
description = "Default template for PDM package"
authors = [{ name = "Gabriel Dugny", email = "git@dugny.me" }]
dependencies = ["requests>=2.31.0"]
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
[project.optional-dependencies]
docs = ["mkdocs>=1.5.3"]

[project.scripts]
sample = "sampleworkspace:main"
testos = "testos:main"
